--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://mysql:3306/dane?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/dane?useSSL=false
 
 # Username and password
 spring.datasource.username = root
